# NeMo-Relay

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.json  AGENTS.md  ATTRIBUTIONS-Node.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  about.hbs  about.toml  codecov.yml  deny.toml  justfile  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  sonar-project.properties
.agents/skills/: README.md
.config/: nextest.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  actionlint.yaml  ci-path-filters.yml  ci-tool-versions.env  copy-pr-bot.yaml  ops-bot.yaml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-enhancement.yml  03-documentation.yml  04-epic.yml  05-initiative.yml  config.yml
.github/workflows/: ci.yaml  ci_changes.yml  ci_check.yml  ci_docs.yml  ci_go.yml  ci_license_diff.yml  ci_node.yml  ci_openclaw.yml  ci_pipe.yml  ci_python.yml  ci_rust.yml  ci_wasm.yml  fern-docs.yml  nightly-alpha-tag.yaml  pr-labels.yaml  request-nvskills-ci.yml  stale.yaml
crates/adaptive/: Cargo.toml  README.md
crates/adaptive/src/: acg_component.rs  acg_learner.rs  acg_profile.rs  adaptive_hints_intercept.rs  cache_diagnostics.rs  config.rs  context_helpers.rs  drain.rs  error.rs  intercepts.rs  lib.rs  plugin_component.rs  redis.rs  subscriber.rs  tool_parallelism_learner.rs
crates/adaptive/src/acg/: anthropic_plugin.rs  canonicalize.rs  capability.rs  debug.rs  economics.rs  error.rs  ir_builder.rs  mod.rs  openai_plugin.rs  passthrough.rs  plugin.rs  plugin_registry.rs  policy.rs  profile.rs  prompt_ir.rs  retention.rs  stability.rs  telemetry.rs  types.rs  variable_extractor.rs
crates/adaptive/src/acg/request_surfaces/: anthropic_messages.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/adaptive/src/acg/translation/: anthropic.rs  mod.rs  openai.rs
crates/adaptive/src/learner/: latency.rs  mod.rs  traits.rs
crates/adaptive/src/runtime/: backend.rs  features.rs  mod.rs  validation.rs
crates/adaptive/src/storage/: erased.rs  memory.rs  mod.rs  traits.rs
crates/adaptive/src/trie/: accumulator.rs  builder.rs  data_models.rs  lookup.rs  mod.rs  serialization.rs
crates/adaptive/src/types/: cache.rs  metadata.rs  mod.rs  plan.rs  records.rs
crates/adaptive/tests/coverage/: error_tests.rs  subscriber_tests.rs
crates/adaptive/tests/integration/: acg_module_surface_tests.rs  redis_tests.rs  runtime_integration_tests.rs  tool_parallelism_plan_tests.rs
crates/adaptive/tests/unit/: acg_component_tests.rs  acg_learner_tests.rs  acg_profile_tests.rs  adaptive_hints_intercept_tests.rs  cache_diagnostics_tests.rs  config_tests.rs  context_helpers_tests.rs  drain_tests.rs  intercepts_tests.rs  learner_tests.rs  plugin_component_tests.rs  redis_tests.rs  runtime_features_tests.rs  runtime_tests.rs  storage_memory_internal_tests.rs  storage_tests.rs  tool_parallelism_learner_tests.rs  types_tests.rs
crates/adaptive/tests/unit/acg/: anthropic_messages_surface_tests.rs  anthropic_plugin_tests.rs  canonicalize_tests.rs  capability_tests.rs  debug_tests.rs  economics_internal_tests.rs  economics_policy_tests.rs  error_tests.rs  ir_builder_tests.rs  mod.rs  multi_breakpoint_tests.rs  openai_plugin_tests.rs  openai_responses_surface_tests.rs  passthrough_tests.rs  plugin_registry_tests.rs  plugin_tests.rs  profile_tests.rs  prompt_ir_tests.rs  request_surface_tests.rs  retention_tests.rs  stability_internal_tests.rs  telemetry_tests.rs  translation_tests.rs  types_tests.rs  variable_extractor_tests.rs
crates/adaptive/tests/unit/trie/: accumulator_tests.rs  builder_tests.rs  data_models_tests.rs  lookup_tests.rs  serialization_tests.rs
crates/cli/: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md
crates/core/tests/fixtures/native_plugin/: Cargo.toml
crates/core/tests/fixtures/native_plugin/src/: lib.rs
crates/core/tests/fixtures/worker_plugin/: Cargo.toml
crates/core/tests/fixtures/worker_plugin/src/: main.rs
crates/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  nemo_flow.h  nemo_relay.h
crates/ffi/src/: callable.rs  convert.rs  error.rs  lib.rs
crates/ffi/src/api/: adaptive.rs  llm.rs  llm_registry.rs  mod.rs  observability.rs  plugin.rs  scope.rs  scope_registry.rs  scope_stack.rs  tool_lifecycle.rs  tool_registry.rs
crates/ffi/src/types/: mod.rs
crates/ffi/tests/coverage/: convert_tests.rs  error_tests.rs
crates/ffi/tests/integration/: api_tests.rs  callable_extra_tests.rs  main.rs
crates/ffi/tests/integration/api/: coverage_sweeps_tests.rs
crates/ffi/tests/unit/: api_tests.rs  callable_private_tests.rs  callable_tests.rs  types_tests.rs
crates/ffi/tests/unit/api/: core_tests.rs  coverage_sweeps_tests.rs  execution_tests.rs  plugin_tests.rs  registry_tests.rs
crates/node/: Cargo.toml  README.md  adaptive.d.ts  adaptive.js  build.rs  model_pricing.d.ts  model_pricing.js  package-lock.json  package.json  plugin.d.ts  plugin.js  typed.d.ts  typed.js
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/plugin/tests/: typed_callbacks.rs
crates/python/: Cargo.toml  README.md
crates/sidecar/: Cargo.toml
crates/wasm/: Cargo.toml  README.md  package.json
crates/worker/: Cargo.toml
crates/worker-proto/: Cargo.toml  build.rs
crates/worker-proto/proto/nemo/relay/worker/v1/: plugin_worker.proto
crates/worker-proto/src/: lib.rs
crates/worker-proto/tests/: proto_tests.rs
crates/worker/src/: lib.rs
crates/worker/tests/: worker_sdk_tests.rs
docs/: conf.py  index.md  index.yml  typedoc.node.json  typedoc.node.tsconfig.json
docs/_static/: extra.css  version-switcher.js
docs/_templates/: version-switcher.html
examples/rust-native-plugin/: .gitignore  Cargo.toml  README.md  config.schema.json  relay-plugin.toml
examples/rust-native-plugin/src/: lib.rs
fern/: README.md  docs.yml
scripts/: README.md  apply-patches.sh  bootstrap-third-party.sh  build-docs.sh  generate-patches.sh  generate_attributions.sh
skills/: README.md
(+1593 files in other folders)
