# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "crates/core",
    "crates/adaptive",
    # Language Bindings
    "crates/python",
    "crates/ffi",
    "crates/node",
    "crates/wasm"
]
exclude = [".tmp", ".uv-cache"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/NVIDIA/NeMo-Flow"

[workspace.dependencies]
nemo-flow = { version = "0.1.0", path = "crates/core", default-features = false }
nemo-flow-adaptive = { version = "0.1.0", path = "crates/adaptive" }
nemo-flow-ffi = { version = "0.1.0", path = "crates/ffi" }
uuid = "=1.18.1"

[workspace.lints.rust]
missing_docs = "deny"
