# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-adaptive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Adaptive runtime primitives and Redis-backed learning components for NeMo Flow."
readme = "README.md"

[lints]
workspace = true

[dependencies]
nemo-flow.workspace = true
uuid = { workspace = true, features = ["v4", "v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tdigest = { version = "0.2", features = ["use_serde"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
regex = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.11"

redis = { version = "1.1", features = ["tokio-comp", "connection-manager"], optional = true }

[features]
redis-backend = ["redis"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "time", "test-util", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false }

[[test]]
name = "redis_integration"
path = "tests/integration/redis_tests.rs"

[[test]]
name = "runtime_integration"
path = "tests/integration/runtime_integration_tests.rs"

[[test]]
name = "acg_module_surface"
path = "tests/integration/acg_module_surface_tests.rs"
