# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-flow-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "C-compatible FFI bindings for integrating NeMo Flow into native applications."
readme = "README.md"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
nemo-flow = { workspace = true, features = ["otel", "openinference"] }
nemo-flow-adaptive = { workspace = true, features = ["redis-backend"] }
chrono = "0.4"
libc = "0.2"
serde_json = "1"
uuid = { workspace = true, features = ["v7"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"

[build-dependencies]
cbindgen = "0.29.2"
