# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-relay-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust plugin authoring SDK and stable native plugin ABI for NeMo Relay."

[lints]
workspace = true

[dependencies]
nemo-relay-types.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
