# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-relay-worker-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "gRPC protocol definitions for NeMo Relay out-of-process worker plugins."

[lints]
workspace = true

[dependencies]
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.14.2", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14.2"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.2"
