# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-relay-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for NeMo Relay out-of-process gRPC worker plugins."

[lints]
workspace = true

[dependencies]
futures-util = "0.3"
hyper-util = { version = "0.1", features = ["tokio"] }
nemo-relay-types.workspace = true
nemo-relay-worker-proto.workspace = true
serde_json = "1"
serde = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = { version = "0.14.2", default-features = false, features = ["codegen", "router", "transport"] }
tower = { version = "0.5", features = ["util"] }
