# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[workspace]

[package]
name = "nemo-relay-worker-plugin-fixture"
version = "0.0.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[[bin]]
name = "nemo-relay-worker-plugin-fixture"
path = "src/main.rs"

[dependencies]
nemo-relay-worker = { path = "../../../../worker" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
